changed ports for dynamically assigned by hotel

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "You're wondering how to secure your backend application with simple token? This is how we do. Without passport/auth0/jwt/openauth etc. For now without database to avoid storing tons of fake users. Just for test purpouses.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cd server && nodemon server"
   },
   "repository": {
     "type": "git",
