removed unused packages, fixed communication between applications

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "You're wondering how to secure your backend application with simple token? This is how we do. Without passport/auth0/jwt/openauth etc. For now without database to avoid storing tons of fake users. Just for test purpouses.",
   "main": "index.js",
   "scripts": {
-    "hotel-init": "cd server && npm run set-server && cd .. && cd client && npm run set-client"
+    "hotel-init": "cd server && npm run set-server && cd .. && cd client && npm run set-client",
+    "hotel-reset": "hotel stop && hotel start"
   },
   "repository": {
     "type": "git",
