--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "express-http-proxy": "^1.6.0",
-    "http-proxy": "^1.18.0",
-    "node-http-proxy": "^0.2.3"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
   }
 }
