--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "You're wondering how to secure your backend application with simple token? This is how we do. Without passport/auth0/jwt/openauth etc. For now without database to avoid storing tons of fake users. Just for test purpouses.",
   "main": "index.js",
   "scripts": {
-    "hotel-init": "cd server && npm run set-server && cd .. && cd client && npm run set-client",
+    "install:client": "cd client && npm install",
+    "install:server": "cd server && npm install",
+    "install:all": "npm run install:client && npm run install:server",
+    "hotel-init:client": "cd client && npm run set-client",
+    "hotel-init:server": "cd server && npm run set-server",
+    "hotel-init": "npm run hotel-init:client && npm run hotel-init:server",
+    "hotel-start": "hotel start",
+    "hotel-stop": "hotel stop",
     "hotel-reset": "hotel stop && hotel start"
   },
   "repository": {
