--- a/package.json
+++ b/package.json
@@ -27,8 +27,24 @@
     "url": "https://github.com/kazbag/express-security-practice/issues"
   },
   "homepage": "https://github.com/kazbag/express-security-practice#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@types/eslint-plugin-prettier": "^2.2.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-flowtype": "^4.6.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "prettier": "^1.19.1"
+  },
   "devDependencies": {
-    "hotel": "^0.8.7"
+    "hotel": "^0.8.7",
+    "eslint": "^6.8.0",
+    "@types/eslint": "^6.1.8",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
