--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "set-client": "hotel add \"npm start\" index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
