--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "set-server": "hotel add \"npm start\" server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
